# deadly-duck2

./: pom.xml
client/prototype/: main.py
rusty-client/: .gitignore  Cargo.toml  build.rs  readme.md
rusty-client/proto/: InputGatewayApi.proto  readme.md
rusty-client/src/: main.rs  protogen.rs
rusty-client/src/protogen/: readme.md
server/: pom.xml
server/src/main/java/com/zwartzon/: App.java  MainApp.java
server/src/main/java/com/zwartzon/application/: GrpcApiServiceImpl.java  UserDtoConverter.java
server/src/main/java/com/zwartzon/infrastructure/: GrpcApiConfiguration.java  UserConfiguration.java
server/src/main/java/com/zwartzon/user/: UserConfiguration.java
src/main/java/com/example/: App.java  MonolithApp.java  TehController.java
src/main/java/com/example/chaos/: Config.java
src/main/java/com/example/chaos/core/: Action.java  ActionResult.java  Emitter.java  Game.java  GameRepository.java  GameServer.java  GameService.java  GameWorld.java  Metadata.java  PlayerContextDto.java  World.java
src/main/java/com/example/chaos/infrastructure/: ConsoleEmitter.java  GameRepositoryPrototype.java  GameServerPrototype.java
src/main/java/com/example/chaos/webapi/: CommandsController.java  GameListViewDto.java  NewGameInputDto.java  QueriesController.java  StartGameInputDto.java
src/main/java/com/example/pokker/: Config.java
src/main/java/com/example/tennis/: Config.java
src/main/java/com/example/user/: UserConfiguration.java
src/main/kotlin/com/example/: KotlinBootApplication.kt  SimpleController.kt  hello.kt
(+77 files in other folders)
