[package]
name = "rusty-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "2"
httpbis = { git = "https://github.com/stepancheg/rust-http2"}
grpc = "0.8.3"
grpc-protobuf = "*"
futures = "0.3"

[build-dependencies]
protoc-rust-grpc = "0.8.2"

